# web/openapi/get_models.yml
@@ -51,6 +51,18 @@ definitions:
       y:
         type: string
         example: result
+      variant:
+        type: number
+        example: 1
+      task:
+        type: string
+        example: kpp
+      filename:
+        type: string
+        example: model.csv
+      is_full_to_train:
+        type: boolean
+        example: true
       author:
         type: string
         example: artem
@@ -66,7 +78,8 @@ definitions:
         example: regression
       category:
         type: string
-        example: tree
+        example: m1
+        enum: [ m1, m2, m3, m4, m5, m6, m7, m8, m9 ]
       metrics:
         type: object
         properties:
@@ -77,6 +90,9 @@ definitions:
             type: number
             example: 0.7
           r2:
+            type: number
+            example: 0.7
+          maxf1:
             type: number
             example: 0.7
           additional:
